// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PROMPTS catalog full snapshot of every category × subcategory 1`] = `
{
  "age-transform": {
    "baby": {
      "accessories": [
        {
          "id": "pacifier",
          "label": "Pacifier",
          "promptSnippet": " Additionally, the baby should have a pacifier in their mouth in a soft pastel color (white, blue, or pink). The pacifier must be clearly visible.",
        },
      ],
      "label": "Baby (1yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like a 1-year-old baby version of themselves. Maintain family resemblance.",
    },
    "child": {
      "label": "Child (8yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like an 8-year-old child version of themselves.",
    },
    "elderly": {
      "accessories": [
        {
          "id": "reading-glasses",
          "label": "Reading glasses",
          "promptSnippet": " Additionally, add a pair of reading glasses on the face in a frame style that suits an elderly person.",
        },
        {
          "id": "cane",
          "label": "Walking cane",
          "promptSnippet": " Additionally, the elderly person should be holding a wooden walking cane in their hand. The cane must be clearly visible.",
        },
      ],
      "label": "Elderly (80yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like an 80-year-old version of themselves with natural aging (wrinkles, grey hair, aged skin).",
    },
    "middle-aged": {
      "accessories": [
        {
          "id": "reading-glasses",
          "label": "Reading glasses",
          "promptSnippet": " Additionally, add a pair of subtle reading glasses on the face in a frame style that suits the person.",
        },
      ],
      "label": "Middle Aged (50yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like a 50-year-old version of themselves with natural aging.",
    },
    "teen": {
      "label": "Teen (16yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like a 16-year-old teen version of themselves.",
    },
    "young-adult": {
      "label": "Young Adult (25yr)",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to look like a 25-year-old version of themselves.",
    },
  },
  "celebrity-mashup": {
    "beyonce-child": {
      "label": "Beyoncé's Child",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with Beyoncé's for a photorealistic child portrait.",
    },
    "drake-sibling": {
      "label": "Drake's Sibling",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with Drake's for a photorealistic sibling portrait.",
    },
    "kardashian-family": {
      "label": "Kardashian Family",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person with the Kardashian family aesthetic for a photorealistic family portrait.",
    },
    "zendaya-twin": {
      "label": "Zendaya's Twin",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with Zendaya's for a photorealistic twin portrait.",
    },
  },
  "ethnicity-blend": {
    "half-brazilian": {
      "label": "Half Brazilian",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform this person to look half Brazilian and half their current ethnicity, naturally blended.",
    },
    "half-japanese": {
      "label": "Half Japanese",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform this person to look half Japanese and half their current ethnicity, naturally blended.",
    },
    "half-nigerian": {
      "label": "Half Nigerian",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform this person to look half Nigerian and half their current ethnicity, naturally blended.",
    },
    "half-scandinavian": {
      "label": "Half Scandinavian",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform this person to look half Scandinavian and half their current ethnicity, naturally blended.",
    },
  },
  "gender-swap": {
    "androgynous": {
      "label": "Androgynous",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to appear androgynous. Balance facial features and hair to a neutral presentation.",
    },
    "female": {
      "label": "Female",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to appear as a female version of themselves. Adjust facial structure, hair, and any visible features naturally. Adapt clothing style to the new presentation while keeping the same vibe.",
    },
    "male": {
      "label": "Male",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person to appear as a male version of themselves. Adjust facial structure (jawline, brow), hair, and any visible body features naturally. Adapt clothing style to the new presentation while keeping the same vibe.",
    },
  },
  "political-mashup": {
    "aoc-sibling": {
      "label": "AOC's Sibling",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with Alexandria Ocasio-Cortez's to create a photorealistic sibling portrait.",
    },
    "biden-spouse": {
      "label": "Biden's Spouse",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features as a plausible Biden-family spouse. Keep photorealistic.",
    },
    "obama-child": {
      "label": "Obama's Kid",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with the Obama family to create a photorealistic Obama-family portrait.",
    },
    "trump-child": {
      "label": "Trump's Kid",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Blend this person's features with the Trump family to create a photorealistic Trump-family portrait.",
    },
  },
  "race-swap": {
    "black": {
      "accessories": [
        {
          "id": "durag",
          "label": "Durag",
          "promptSnippet": " Additionally, place a black silk durag tied snugly around the head in the traditional style, with the long ties hanging down the back. The durag must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "headwrap",
          "label": "Headwrap",
          "promptSnippet": " Additionally, add a colorful patterned African-style headwrap (gele) tied around the head. The headwrap must be clearly visible and replaces any existing headwear from the original photo.",
        },
      ],
      "label": "Black",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of Black/African descent. Shift their features in a direction that is distinctly Black rather than East/Southeast Asian, South Asian, Latino, Middle Eastern, or White: warm medium-brown to deep-brown skin, tightly coiled or curly natural hair texture (or an equivalently Black hairstyle that matches the original cut length), fuller lips, a broader nose with a more rounded tip, and warm undertones. The change must be strong enough that a viewer looking only at the edited image would identify the person as Black/African-descended without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
    "east-asian": {
      "accessories": [
        {
          "id": "conical-hat",
          "label": "Conical sun hat",
          "promptSnippet": " Additionally, place a traditional East Asian conical straw sun hat (dǒulì / non lá) on the head. The hat must be clearly visible and replaces any existing headwear from the original photo.",
        },
      ],
      "label": "East Asian",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of East Asian descent — think Chinese, Japanese, or Korean heritage. Shift their features in a direction that is distinctly East Asian rather than Southeast Asian, South Asian, Latino, Black, or White: cool-undertone fair to light-tan skin, straight black or very dark brown hair, eye shape with a defined epicanthic fold, a smaller refined nose with a lower bridge, and smoother less-angular facial bone structure with a softer brow ridge. The change must be strong enough that a viewer looking only at the edited image would identify the person as East Asian without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
    "latino": {
      "accessories": [
        {
          "id": "sombrero",
          "label": "Sombrero",
          "promptSnippet": " Additionally, place a traditional wide-brimmed Mexican sombrero on the head with decorative trim around the brim. The sombrero must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "charro-hat",
          "label": "Charro hat",
          "promptSnippet": " Additionally, place a traditional Mexican charro hat (sombrero charro) on the head — a stiff felt hat with a wide flat brim and ornate embroidery. The hat must be clearly visible and replaces any existing headwear from the original photo.",
        },
      ],
      "label": "Latino",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of Latino/Hispanic descent — think mestizo Latin American heritage such as Mexican, Colombian, or Peruvian. Shift their features in a direction that is distinctly Latino rather than East/Southeast Asian, South Asian, Middle Eastern, Black, or White: warm olive-to-tan skin, dark brown or black hair that often has a wave or slight curl, dark brown eyes, and a mestizo facial bone structure (rounder or slightly broader face, defined cheekbones, warm undertones). The change must be strong enough that a viewer looking only at the edited image would identify the person as Latino without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
    "middle-eastern": {
      "accessories": [
        {
          "id": "hijab",
          "label": "Hijab",
          "promptSnippet": " Additionally, drape a hijab head covering naturally and modestly around the head, framing the face. The hijab must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "keffiyeh",
          "label": "Keffiyeh",
          "promptSnippet": " Additionally, drape a traditional checkered keffiyeh (black-and-white or red-and-white) over the head and shoulders in the traditional Arab style. The keffiyeh must be clearly visible and replaces any existing headwear from the original photo.",
        },
      ],
      "label": "Middle Eastern",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of Middle Eastern descent — think Arab, Persian, Turkish, or Levantine heritage such as Lebanese, Iranian, or Egyptian. Shift their features in a direction that is distinctly Middle Eastern rather than East/Southeast Asian, South Asian, Latino, Black, or European: warm olive to medium-brown skin, thick dark wavy or curly hair, dark brown eyes under thick full brows, a strong defined brow ridge and nose bridge, and warm undertones. The change must be strong enough that a viewer looking only at the edited image would identify the person as Middle Eastern without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
    "south-asian": {
      "accessories": [
        {
          "id": "turban-sikh",
          "label": "Sikh Turban",
          "promptSnippet": " Additionally, add a neatly wrapped Sikh dastaar (turban) on the head in a solid color such as orange, navy blue, or black. The turban must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "bindi",
          "label": "Bindi",
          "promptSnippet": " Additionally, add a small decorative bindi (a colored or jeweled dot) centered on the forehead between the eyebrows, in the traditional South Asian style. The bindi must be clearly visible.",
        },
      ],
      "label": "South Asian",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of South Asian descent — think Indian, Pakistani, Bangladeshi, or Sri Lankan heritage. Shift their features in a direction that is distinctly South Asian rather than East/Southeast Asian, Middle Eastern, Latino, Black, or White: warm medium-to-deep brown skin with golden undertones, very dark thick hair that is often wavy, deep brown eyes under thicker eyebrows, a pronounced brow ridge and defined nose bridge, and strong cheekbones. The change must be strong enough that a viewer looking only at the edited image would identify the person as South Asian without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
    "white-european": {
      "accessories": [
        {
          "id": "cowboy-hat",
          "label": "Cowboy hat",
          "promptSnippet": " Additionally, place a classic brown leather cowboy hat with a curled brim on the head. The hat must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "beanie",
          "label": "Beanie",
          "promptSnippet": " Additionally, place a knitted beanie on the head in a neutral color (charcoal, black, or oatmeal) that suits the person. The beanie must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "newsboy-cap",
          "label": "Newsboy cap",
          "promptSnippet": " Additionally, place a tweed newsboy cap (flat cap) on the head in a brown or grey herringbone pattern. The cap must be clearly visible and replaces any existing headwear from the original photo.",
        },
        {
          "id": "yamaka",
          "label": "Yamaka",
          "promptSnippet": " Additionally, place a small kippah (yamaka) on the crown of the head in a solid color such as black, navy, or maroon. The kippah must be clearly visible (sitting on top of the hair, not replacing it) and is in addition to the original hairstyle.",
        },
      ],
      "label": "White/European",
      "prompt": "Edit this photo of a real person. Maintain the exact same pose, expression, lighting, background, and composition. The edit should look like a natural, photorealistic photograph — not AI-generated or cartoonish. Preserve the person's core facial structure and identity as much as possible while applying the following transformation: Transform the person so they appear clearly and recognizably of White/European descent — think Northern or Central European heritage such as British, German, Scandinavian, or Slavic. Shift their features in a direction that is distinctly White rather than East/Southeast Asian, South Asian, Middle Eastern, Latino, or Black: fair skin with pink or peach undertones, hair in the blond, light-brown, auburn, or medium-brown range (not jet black), lighter eye color where plausible (blue, green, hazel, or light brown), a narrower nose with a defined bridge, more angular European facial structure, and cool skin undertones. The change must be strong enough that a viewer looking only at the edited image would identify the person as White/European without ambiguity — a subtle skin-tone nudge is NOT enough. Keep clothing, accessories, pose, expression, and the background identical.",
    },
  },
}
`;

exports[`appendAccessoryPrompt snapshot of every accessory snippet across the catalog 1`] = `
{
  "age-transform/baby/pacifier": " Additionally, the baby should have a pacifier in their mouth in a soft pastel color (white, blue, or pink). The pacifier must be clearly visible.",
  "age-transform/elderly/cane": " Additionally, the elderly person should be holding a wooden walking cane in their hand. The cane must be clearly visible.",
  "age-transform/elderly/reading-glasses": " Additionally, add a pair of reading glasses on the face in a frame style that suits an elderly person.",
  "age-transform/middle-aged/reading-glasses": " Additionally, add a pair of subtle reading glasses on the face in a frame style that suits the person.",
  "race-swap/black/durag": " Additionally, place a black silk durag tied snugly around the head in the traditional style, with the long ties hanging down the back. The durag must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/black/headwrap": " Additionally, add a colorful patterned African-style headwrap (gele) tied around the head. The headwrap must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/east-asian/conical-hat": " Additionally, place a traditional East Asian conical straw sun hat (dǒulì / non lá) on the head. The hat must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/latino/charro-hat": " Additionally, place a traditional Mexican charro hat (sombrero charro) on the head — a stiff felt hat with a wide flat brim and ornate embroidery. The hat must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/latino/sombrero": " Additionally, place a traditional wide-brimmed Mexican sombrero on the head with decorative trim around the brim. The sombrero must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/middle-eastern/hijab": " Additionally, drape a hijab head covering naturally and modestly around the head, framing the face. The hijab must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/middle-eastern/keffiyeh": " Additionally, drape a traditional checkered keffiyeh (black-and-white or red-and-white) over the head and shoulders in the traditional Arab style. The keffiyeh must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/south-asian/bindi": " Additionally, add a small decorative bindi (a colored or jeweled dot) centered on the forehead between the eyebrows, in the traditional South Asian style. The bindi must be clearly visible.",
  "race-swap/south-asian/turban-sikh": " Additionally, add a neatly wrapped Sikh dastaar (turban) on the head in a solid color such as orange, navy blue, or black. The turban must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/white-european/beanie": " Additionally, place a knitted beanie on the head in a neutral color (charcoal, black, or oatmeal) that suits the person. The beanie must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/white-european/cowboy-hat": " Additionally, place a classic brown leather cowboy hat with a curled brim on the head. The hat must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/white-european/newsboy-cap": " Additionally, place a tweed newsboy cap (flat cap) on the head in a brown or grey herringbone pattern. The cap must be clearly visible and replaces any existing headwear from the original photo.",
  "race-swap/white-european/yamaka": " Additionally, place a small kippah (yamaka) on the crown of the head in a solid color such as black, navy, or maroon. The kippah must be clearly visible (sitting on top of the hair, not replacing it) and is in addition to the original hairstyle.",
}
`;

exports[`buildScopedPrompt all-selected branch (count = N, labels.length = N) — snapshot 1`] = `
"This image contains 3 people. Apply the transformation to EVERY SINGLE ONE of the 3 people in the image — not just the most prominent subject, not just the person in the foreground. All 3 individuals must be transformed.

Preserve the full original background, composition, poses, expressions, clothing, and positions. Only the specified transformation should change; every other visual element must remain identical.

Transformation to apply to all 3 people:
BASE_PROMPT_TEXT"
`;

exports[`buildScopedPrompt all-selected branch (no labels, count > 1) — snapshot 1`] = `
"This image contains 4 people. Apply the transformation to EVERY SINGLE ONE of the 4 people in the image — not just the most prominent subject, not just the person in the foreground. All 4 individuals must be transformed.

Preserve the full original background, composition, poses, expressions, clothing, and positions. Only the specified transformation should change; every other visual element must remain identical.

Transformation to apply to all 4 people:
BASE_PROMPT_TEXT"
`;

exports[`buildScopedPrompt all-selected branch (no labels, count > 1) — snapshot 2`] = `
"This image contains 4 people. Apply the transformation to EVERY SINGLE ONE of the 4 people in the image — not just the most prominent subject, not just the person in the foreground. All 4 individuals must be transformed.

Preserve the full original background, composition, poses, expressions, clothing, and positions. Only the specified transformation should change; every other visual element must remain identical.

Transformation to apply to all 4 people:
BASE_PROMPT_TEXT"
`;

exports[`buildScopedPrompt subset-selected branch — snapshot 1`] = `
"This image contains 4 people. Apply the transformation ONLY to the following person or people:
- the woman in the red shirt

CRITICAL: Every other person in the image must be left COMPLETELY UNCHANGED — identical face, skin tone, hair, expression, clothing, pose, and position. Do not edit, retouch, or alter anyone not in the list above. Preserve the full original background and composition.

Transformation to apply to the listed person/people only:
BASE_PROMPT_TEXT"
`;

exports[`isPremiumCategory snapshot of premium membership across the catalog 1`] = `
{
  "age-transform": false,
  "celebrity-mashup": true,
  "ethnicity-blend": true,
  "gender-swap": false,
  "political-mashup": true,
  "race-swap": false,
}
`;
